[package]
name = "env_logger"
edition = "2018"
version = "0.7.1" # remember to update html_root_url
authors = ["The Rust Project Developers"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/sebasmagri/env_logger/"
documentation = "https://docs.rs/env_logger"
description = """
A logging implementation for `log` which is configured via an environment
variable.
"""
categories = ["development-tools::debugging"]
keywords = ["logging", "log", "logger"]
exclude = ["/sgx/*"]

[workspace]
members = [
    "ci"
]

[dependencies]
log = { rev = "sgx_1.1.4", features = ["std"], git = "https://github.com/yunuseozer/log-sgx" }
regex = { optional = true, git = "https://github.com/yunuseozer/regex-sgx" }
termcolor = { rev = "sgx_1.1.4", optional = true, git = "https://github.com/yunuseozer/termcolor-sgx" }
humantime = { rev = "sgx_1.1.4", optional = true, git = "https://github.com/yunuseozer/humantime-sgx" }
#atty = { version = "0.2.5", optional = true }
sgx_tstd = { rev = "v1.1.4", git = "https://github.com/apache/teaclave-sgx-sdk.git", optional = true }

[[test]]
name = "regexp_filter"
harness = false

[[test]]
name = "log-in-log"
harness = false

[[test]]
name = "log_tls_dtors"
harness = false

[[test]]
name = "init-twice-retains-filter"
harness = false

[features]
default = ["termcolor", "humantime", "regex", "mesalock_sgx"]
mesalock_sgx = ["sgx_tstd"]
